kubernetes/clusters/home/4-apps/arr-stack/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: arr-stack
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"
    
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - prowlarr.alarlab.dev
      secretName: wildcard-alarlab-tls

  rules:
    - host: prowlarr.alarlab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
